Fixed collapse margin of party planner button.

--- a/WebContent/custom.css
+++ b/WebContent/custom.css
@@ -183,14 +183,15 @@ background: radial-gradient(circle, rgba(121,121,121,1) 0%, rgba(69,69,69,1) 60%
     font-size: 50px;
     font-weight: bold; 
     text-shadow: 0px 0px 10px #ff3300, 0px 0px 10px #ff3300, 0px 0px 10px #ff3300;
-    margin-bottom: 100px;
 }
 #buttonBudget:hover, #buttonFood:hover, #buttonDrinks:hover, #buttonParty:hover {
     border: 5px solid #ff3300 !important;
     cursor: pointer;
 }
 
-
+#buttonParty.btn.collapsed {
+	margin-bottom:50px;
+}
 hr {
 	color: #ff3300;
 	background-color: #ff3300;
